--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>JavaScript Assignment</h1>
+     <p>JavaScript is programming and functional language.</p>
 
 
     <script src="script/index.js"></script>
