JavaScript2 file added
added script and file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <p>JavaScript is programming and functional language.</p>
 
 
-    <script src="script/index.js"></script>
+    <script src="script/indexA1.js"></script>
+    <script src="script/JS2.js"></script>
 </body>
 </html>
