--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
    <!--<script src="script/indexA1.js"></script>-->
-    <script src="script/JS2.js"></script>
+   <!-- <script src="script/JS2.js"></script>-->
+    <script src="script/JS3.js"></script>
 </body>
 </html>
