--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
    <!--<script src="script/indexA1.js"></script>-->
    <!-- <script src="script/JS2.js"></script>-->
-    <script src="script/JS3.js"></script>
+    <script src="script/GenerateRandomArray.js"></script>
 </body>
 </html>
