changes in script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
    <!--<script src="script/indexA1.js"></script>-->
    <!-- <script src="script/JS2.js"></script>-->
-   <script src="script/GuessTheNumberA4.js"></script>
-  <!-- <script src="script/GenerateRandomArrayA4.js"></script>-->
+   <!--<script src="script/GuessTheNumberA4.js"></script>-->
+   <script src="script/GenerateRandomArrayA4.js"></script>
    <!--<script src="script/SumOfEvenNoInArray.js"></script>-->
 </body>
 </html>
