--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
    <!--<script src="script/indexA1.js"></script>-->
    <!-- <script src="script/JS2.js"></script>-->
    <!--<script src="script/GuessTheNumberA4.js"></script>-->
-   <script src="script/GenerateRandomArrayA4.js"></script>
+   <!--<script src="script/GenerateRandomArrayA4.js"></script>-->
    <!--<script src="script/SumOfEvenNoInArray.js"></script>-->
+   <script src="script/BankAccount.js"></script>
 </body>
 </html>
