--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
    <!--<script src="script/GuessTheNumberA4.js"></script>-->
    <!--<script src="script/GenerateRandomArrayA4.js"></script>-->
    <!--<script src="script/SumOfEvenNoInArray.js"></script>-->
-   <script src="script/BankAccount.js"></script>
+   <script src="script/ATMBankAccount.js"></script>
 </body>
 </html>
