create another script file
movies track record

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <!--<script src="script/GuessTheNumberA4.js"></script>-->
    <!--<script src="script/GenerateRandomArrayA4.js"></script>-->
    <!--<script src="script/SumOfEvenNoInArray.js"></script>-->
-   <script src="script/ATMBankAccount.js"></script>
+   <!--<script src="script/ATMBankAccount.js"></script>-->
+   <script src="script/MoviesLibrary.js"></script>
 </body>
 </html>
