book librari script added
create object and function
-used diff functions
-forEach ,filter, remove ,push  new methods
-added diff books
-userinput
-

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
    <!--<script src="script/GenerateRandomArrayA4.js"></script>-->
    <!--<script src="script/SumOfEvenNoInArray.js"></script>-->
    <!--<script src="script/ATMBankAccount.js"></script>-->
-   <script src="script/MoviesLibrary.js"></script>
+   <script src="script/BookLibrary.js"></script>
 </body>
 </html>
